src/main/antlr4/compiladores/t4/.antlr/PokemonParser.java
// Generated from d:\7thSemester\Compiladores\Codigo\T6\T6-compiladores\src\main\antlr4\compiladores\t4\Pokemon.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PokemonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		RESERVED_WORD=18, TYPE=19, IDENT=20, NUM=21, WS=22;
	public static final int
		RULE_program = 0, RULE_declare_skill = 1, RULE_declare_skill_attribute = 2, 
		RULE_declare_pokemon = 3, RULE_declare_pokemon_attribute = 4, RULE_battle = 5, 
		RULE_declare_name = 6, RULE_declare_damage = 7, RULE_declare_cost = 8, 
		RULE_declare_type = 9, RULE_declare_hp = 10, RULE_declare_pp = 11, RULE_declare_skills = 12, 
		RULE_attack = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declare_skill", "declare_skill_attribute", "declare_pokemon", 
			"declare_pokemon_attribute", "battle", "declare_name", "declare_damage", 
			"declare_cost", "declare_type", "declare_hp", "declare_pp", "declare_skills", 
			"attack"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'declare skill:'", "'fim_declare'", "'declare pokemon:'", "'begin_batalha:'", 
			"'end_batalha'", "'name:'", "'damage:'", "'cost:'", "'type:'", "'HP:'", 
			"'PP:'", "'skills:'", "'['", "']'", "','", "'USES'", "'ON'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "RESERVED_WORD", "TYPE", "IDENT", 
			"NUM", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pokemon.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PokemonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public BattleContext battle() {
			return getRuleContext(BattleContext.class,0);
		}
		public List<Declare_skillContext> declare_skill() {
			return getRuleContexts(Declare_skillContext.class);
		}
		public Declare_skillContext declare_skill(int i) {
			return getRuleContext(Declare_skillContext.class,i);
		}
		public List<Declare_pokemonContext> declare_pokemon() {
			return getRuleContexts(Declare_pokemonContext.class);
		}
		public Declare_pokemonContext declare_pokemon(int i) {
			return getRuleContext(Declare_pokemonContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(28);
				declare_skill();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(34);
				declare_pokemon();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40);
			battle();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_skillContext extends ParserRuleContext {
		public List<Declare_skill_attributeContext> declare_skill_attribute() {
			return getRuleContexts(Declare_skill_attributeContext.class);
		}
		public Declare_skill_attributeContext declare_skill_attribute(int i) {
			return getRuleContext(Declare_skill_attributeContext.class,i);
		}
		public Declare_skillContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_skill; }
	}

	public final Declare_skillContext declare_skill() throws RecognitionException {
		Declare_skillContext _localctx = new Declare_skillContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declare_skill);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__0);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) {
				{
				{
				setState(43);
				declare_skill_attribute();
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_skill_attributeContext extends ParserRuleContext {
		public Declare_nameContext declare_name() {
			return getRuleContext(Declare_nameContext.class,0);
		}
		public Declare_damageContext declare_damage() {
			return getRuleContext(Declare_damageContext.class,0);
		}
		public Declare_costContext declare_cost() {
			return getRuleContext(Declare_costContext.class,0);
		}
		public Declare_typeContext declare_type() {
			return getRuleContext(Declare_typeContext.class,0);
		}
		public Declare_skill_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_skill_attribute; }
	}

	public final Declare_skill_attributeContext declare_skill_attribute() throws RecognitionException {
		Declare_skill_attributeContext _localctx = new Declare_skill_attributeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declare_skill_attribute);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				declare_name();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				declare_damage();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				declare_cost();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(54);
				declare_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_pokemonContext extends ParserRuleContext {
		public List<Declare_pokemon_attributeContext> declare_pokemon_attribute() {
			return getRuleContexts(Declare_pokemon_attributeContext.class);
		}
		public Declare_pokemon_attributeContext declare_pokemon_attribute(int i) {
			return getRuleContext(Declare_pokemon_attributeContext.class,i);
		}
		public Declare_pokemonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_pokemon; }
	}

	public final Declare_pokemonContext declare_pokemon() throws RecognitionException {
		Declare_pokemonContext _localctx = new Declare_pokemonContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declare_pokemon);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(T__2);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) {
				{
				{
				setState(58);
				declare_pokemon_attribute();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_pokemon_attributeContext extends ParserRuleContext {
		public Declare_nameContext declare_name() {
			return getRuleContext(Declare_nameContext.class,0);
		}
		public Declare_hpContext declare_hp() {
			return getRuleContext(Declare_hpContext.class,0);
		}
		public Declare_ppContext declare_pp() {
			return getRuleContext(Declare_ppContext.class,0);
		}
		public Declare_typeContext declare_type() {
			return getRuleContext(Declare_typeContext.class,0);
		}
		public Declare_skillsContext declare_skills() {
			return getRuleContext(Declare_skillsContext.class,0);
		}
		public Declare_pokemon_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_pokemon_attribute; }
	}

	public final Declare_pokemon_attributeContext declare_pokemon_attribute() throws RecognitionException {
		Declare_pokemon_attributeContext _localctx = new Declare_pokemon_attributeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declare_pokemon_attribute);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				declare_name();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				declare_hp();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				declare_pp();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				declare_type();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				declare_skills();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BattleContext extends ParserRuleContext {
		public List<AttackContext> attack() {
			return getRuleContexts(AttackContext.class);
		}
		public AttackContext attack(int i) {
			return getRuleContext(AttackContext.class,i);
		}
		public BattleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_battle; }
	}

	public final BattleContext battle() throws RecognitionException {
		BattleContext _localctx = new BattleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_battle);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__3);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(74);
				attack();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_nameContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(PokemonParser.IDENT, 0); }
		public Declare_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_name; }
	}

	public final Declare_nameContext declare_name() throws RecognitionException {
		Declare_nameContext _localctx = new Declare_nameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declare_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__5);
			setState(83);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_damageContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(PokemonParser.NUM, 0); }
		public Declare_damageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_damage; }
	}

	public final Declare_damageContext declare_damage() throws RecognitionException {
		Declare_damageContext _localctx = new Declare_damageContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declare_damage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__6);
			setState(86);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_costContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(PokemonParser.NUM, 0); }
		public Declare_costContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_cost; }
	}

	public final Declare_costContext declare_cost() throws RecognitionException {
		Declare_costContext _localctx = new Declare_costContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declare_cost);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__7);
			setState(89);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_typeContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(PokemonParser.TYPE, 0); }
		public Declare_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_type; }
	}

	public final Declare_typeContext declare_type() throws RecognitionException {
		Declare_typeContext _localctx = new Declare_typeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declare_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__8);
			setState(92);
			match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_hpContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(PokemonParser.NUM, 0); }
		public Declare_hpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_hp; }
	}

	public final Declare_hpContext declare_hp() throws RecognitionException {
		Declare_hpContext _localctx = new Declare_hpContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declare_hp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__9);
			setState(95);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_ppContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(PokemonParser.NUM, 0); }
		public Declare_ppContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_pp; }
	}

	public final Declare_ppContext declare_pp() throws RecognitionException {
		Declare_ppContext _localctx = new Declare_ppContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_declare_pp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__10);
			setState(98);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_skillsContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(PokemonParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(PokemonParser.IDENT, i);
		}
		public List<TerminalNode> NUM() { return getTokens(PokemonParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(PokemonParser.NUM, i);
		}
		public Declare_skillsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_skills; }
	}

	public final Declare_skillsContext declare_skills() throws RecognitionException {
		Declare_skillsContext _localctx = new Declare_skillsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_declare_skills);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__11);
			setState(101);
			match(IDENT);
			setState(102);
			match(T__12);
			setState(103);
			match(NUM);
			setState(104);
			match(T__13);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				setState(105);
				match(T__14);
				setState(106);
				match(IDENT);
				setState(107);
				match(T__12);
				setState(108);
				match(NUM);
				setState(109);
				match(T__13);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttackContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(PokemonParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(PokemonParser.IDENT, i);
		}
		public AttackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attack; }
	}

	public final AttackContext attack() throws RecognitionException {
		AttackContext _localctx = new AttackContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_attack);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(IDENT);
			setState(116);
			match(T__15);
			setState(117);
			match(IDENT);
			setState(118);
			match(T__16);
			setState(119);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}